Implement retrieving game items
Update generated clients
Add retrieving game items
Add documentation
