# Water/Water/Entities/GameState.cs
@@ -1,9 +1,21 @@
 ﻿namespace Water.Entities
 {
+	/// <summary>
+	/// Representes enumeration of game states
+	/// </summary>
 	public enum GameState
 	{
+		/// <summary>
+		/// Released
+		/// </summary>
 		Released,
+		/// <summary>
+		/// Early access
+		/// </summary>
 		EarlyAccess,
+		/// <summary>
+		/// Preorder
+		/// </summary>
 		Preorder,
 	}
 }
